--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javaScript เบื้องต้น</title>
-    <script src="try.js"></script> 
+    <script src="array.js"></script> 
     <!--internal-->
     <script type="text/javaScript">
         document.write("<h1><i>Naravit</i></h1>")
@@ -13,6 +13,7 @@
     
 </head>
 <body>
+    <button onclick="tranfer()">hello</button> <!--onclick เป็นการเรียนใช้อะไรบางอย่างเมื่อกดปุ่ม ในที่นี้คือฟังก์ชัน-->
     
 </body>
 </html>
