--- a/VSGIT/index.html
+++ b/VSGIT/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello wolrd
-    </h1>
+    <h1>hello wolrd</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Explicabo ut maxime minus est mollitia, suscipit harum laudantium veritatis cumque, nulla, molestiae eos. 
+        Ex facere ipsam repudiandae corporis deserunt? Illum, facilis!</p>
 </body>
 </html>
